Fixed contrast accessiblity issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ html {
 /* Link Styling*/
 a {
     text-decoration: none;
-    color: #999999;
+    color: #fff;
 }
 
 a:hover {
@@ -144,13 +144,17 @@ h2 {
 .sidebar {
     max-width: 20%;
     min-width: 20%;
-    background-color: #999;
+    background-color: #555;
     padding: 40px;
     box-sizing: border-box;
     margin-top: 0;
     padding-top: 60px;
     height: 100vh;
     overflow-y: auto;
+}
+
+.sidebar i {
+    color: #999 !important;
 }
 
 /* Profile section in sidebar */
@@ -178,11 +182,11 @@ h2 {
 .profile_details p {
     margin: 4px 0;
     font-size: 14px;
-    color: #333;
+    color: white;
 }
 
 .profile_details i {
-    color: #555;
+    color: #999;
     margin-right: 6px;
 }
 
@@ -200,7 +204,7 @@ h2 {
 .sidebar-nav ul li a {
     display: flex;
     align-items: center;
-    color: #333;
+    color: white;
     text-decoration: none;
     font-weight: 600;
     font-size: 15px;
